style: fix input auto-zoom on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+a {
+  text-decoration: none;
+  color: inherit;
+}
 
+input, select, textarea {
+  font-size: 16px !important;
+}
 
 * {
   margin: 0;
